# DsPy_exploration

./: Custom_modules.ipynb  README.md  ReAct_exploration.ipynb  pyproject.toml  results.json
cheatsheet_optimizers_react_custom_modules/: ReAct_exploration.ipynb
cheatsheet_optimizers_react_custom_modules/.ipynb_checkpoints/: Custom_modules+Refine-checkpoint.ipynb  DSPy_cheatsheet-checkpoint.ipynb
cheatsheet_optimizers_react_custom_modules/optimizers/exploration_evaluation_results/: headlines_sentiment_optimized.json  headlines_sentiment_optimized_teacher.json  miprov1.json  miprov2.json
exploration_evaluation_results/: headlines_sentiment_unoptimized.json
optimizers/: Custom_models.ipynb
optimizers/.ipynb_checkpoints/: Contract_clause_Risk_Assesor_MIPROv2-checkpoint.ipynb  sentiment_analyzer_bootstrap_optimizer-checkpoint.ipynb
snoppy_agent/: main.py  preferences.json
snoppy_agent/other_info/: google_calendar_access.md
snoppy_agent/tools/: finances.py  informational.py  life.py
